@@ -1,3 +1,4 @@
+* Remove overlapping indexes
 
 Version 6.8.4 - 2023-09-06
 --------------------------
